// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders 1`] = `
<input
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  readOnly={false}
  style={{}}
  type="text"
  value=""
/>
`;

exports[`renders textarea 1`] = `
<textarea
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  readOnly={false}
  style={{}}
  value=""
/>
`;

exports[`renders textarea with props 1`] = `
<textarea
  className="CLASSNAME"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  style={
    {
      "color": "#000",
    }
  }
  value="VALUE"
/>
`;

exports[`renders with props 1`] = `
<input
  className="CLASSNAME"
  maxLength={20}
  name="test"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyPress={[Function]}
  placeholder="PLACEHOLDER"
  readOnly={true}
  style={
    {
      "color": "#000",
    }
  }
  type="text"
  value="VALUE"
/>
`;
